--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
   "dependencies": {
     "create-react-app": "^5.0.1"
   },
-  "workspaces": ["packages/*"]
+  "workspaces": [
+    "packages/*"
+  ],
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
